--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      <img src="./dist/logo.webp" class="gh-logo" />
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,36 +34,117 @@
           <a class="nav-link" href="#sponsors">Sponsors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact Us</a>
+          <a class="nav-link" href="./contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
   </nav>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 section splash parallax parallax-splash">
+          <img src="./dist/logo.webp" class="gh-splash mx-auto" />
+          <p class="text-center">
+            Sustainability Hackathon at Johns Hopkins University
+          </p>
+          <button type="button" class="btn btn-dark splash-btn mx-auto">Register Now</button>
+        </div>
+    </div>
+  </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
-        <h1>Greenhacks</h1>
-        <div class="section splash">
-          <h2>Greenhacks</h2>
-        </div>
+      <div class="col-sm-8 offset-sm-2">
         <div class="section about">
-          <h2>About</h2>
+          <img src="./dist/leaves.svg" class="leaves-1"/>
+          <h2 class="about-title ">About</h2>
+            <p>
+            The mounting global environmental crisis will inevitably change the way we think and act. Humans have adopted unsustainable patterns of behavior which threaten our finite planetary resources. We must design new strategies, develop new technologies, and restructure our societal habits in order to take steps towards a more sustainable future.
+            </p>
+            <p>
+            GreenHacks seeks to offer a platform for competitive ideation and creativity to spark innovative and sustainable solution design. Through the hackathon format, we bring together forward-looking students, JHU faculty members, sustainability organizations, and companies into one space for the purposes of interaction and collaboration in order to:
+            </p>
+            <ul>
+              <li>
+                Accelerate the conversation regarding innovative sustainable solutions.
+              </li>
+              <li>
+                Connect people at the intersection of different fields including design, software development, business, engineering, science, and policy.
+              </li>
+              <li>
+                Encourage creative-thinking, collaboration, networking, personal development, innovation, and invention.
+              </li>
+              <li>
+                Design and pitch innovative green technologies, business proposals, initiatives, solutions, etc.
+              </li>
+            </ul>
         </div>
-        <div class="section faq">
-          <h2>F.A.Q.</h2>
+      </div>
+      <div class="w-100"></div>
+      <!-- line break -->
+      <div class="col-sm-8 offset-sm-2">
+        <div class="about-btn-container d-flex justify-content-around">
+          <button type="button" class="btn btn-dark">Participate</button>
+          <button type="button" class="btn btn-dark">Sponsor</button>
+          <button type="button" class="btn btn-dark">Our Team</button>
+        </div>
+      </div>
+    </div>
+    <div class="row col-sm-8 offset-sm-2">
+      <div class="faq ">
+        <h2 class="faq-title">
+          Frequently <br />
+          Asked <br />
+          Questions <br />
+        </h2>
+        <h3 class="question">
+          What is a Sustainability Hackathon?
+        </h3>
+        <div class="answer-lg">
+          While a “hackathon” was originally used to refer to a collaborative computer programming event, a Sustainability Hackathon will focus on gathering creative and motivated people from diverse backgrounds to design interesting solutions for sustainable development. Students will form teams in order to address specific sustainability challenges and will be judged on the creativity, feasibility, and impact of their ideas. We emphasize that participants can come from all areas of expertise, and solutions can come in any form ranging from well-thought out business proposals, mobile applications, to hardware prototypes, and so on.
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <h3 class="question">
+              Who?
+            </h3>
+            <div class="answer">
+              Open to students of ALL backgrounds and skills from the Homewood campus, Bloomberg School of Public Health, Carey Business School, MICA, and other Hopkins-affiliated schools. You may register as a team or individually.
+            </div>
+          </div>
+          <div class="col-4">
+            <h3 class="question">
+              When & Where?
+            </h3>
+            <div class="answer">
+              April 20th, 2020 (12 noon - 8 pm)
+              Hosted at Fast Forward U
+            </div>
+          </div>
+          <div class="col-4">
+            <h3 class="question">
+              How?
+            </h3>
+            <div class="answer">
+              Participate in the Spring 2019 Pilot hackathon as a team or as an individual
+              <button class="btn btn-dark btn-how-register"> Register Now!</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="footer container">
+  <div class="footer container-fluid">
     <div class="row">
-      <div class="col-md-3 offset-md-3">
-
-      </div>
-      <div class="col-md-3">
-
-      </div>
-      <div class="col-md-3">
+      <div class="col-sm-4 offset-sm-4">
+        <img src="./dist/logo.webp" class="gh-footer mx-auto" />
+        <p>
+          Johns Hopkins University
+        </p>
+        <p>
+          Baltimore MD 21218
+        </p>
+        <p>
+          © 2019 GreenHacks.
+        </p>
 
       </div>
     </div>
