--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Participate</a>
+          <a class="nav-link" href="./registration.html">Participate</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#team">Our Team</a>
