--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Participate</a>
+          <a class="nav-link" href="./registration.html">Participate</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#team">Our Team</a>
