--- a/registration.html
+++ b/registration.html
@@ -28,8 +28,8 @@
         <li class="nav-item">
           <a class="nav-link" href="./index.html">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Participate</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Participate <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#team">Our Team</a>
@@ -37,8 +37,8 @@
         <li class="nav-item">
           <a class="nav-link" href="#sponsors">Sponsors</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Contact Us <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us </a>
         </li>
       </ul>
     </div>
