--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
+
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -44,7 +47,7 @@
     <div class="row">
         <div class="col-xs-12 section splash parallax parallax-splash">
           <img src="./dist/logo.webp" class="gh-splash mx-auto" />
-          <button type="button" class="btn btn-dark splash-btn mx-auto">Register Now</button>
+          <a href="/registration.html" type="button" class="btn btn-dark splash-btn mx-auto">Register Now</a>
         </div>
     </div>
   </div>
@@ -107,7 +110,7 @@
               Who?
             </h3>
             <div class="answer">
-              Open to students of ALL backgrounds and skills from the Homewood campus, Bloomberg School of Public Health, Carey Business School, MICA, and other Hopkins-affiliated schools. You may register as a team or individually.
+              Open to any university students.
             </div>
           </div>
           <div class="col-md-4">
@@ -115,8 +118,8 @@
               When & Where?
             </h3>
             <div class="answer">
-              April 20th, 2020 (12 noon - 8 pm)
-              Hosted at Fast Forward U
+              March 27-29, 2020<br />
+              Hodson building on Hopkins Homewood campus
             </div>
           </div>
           <div class="col-md-4">
@@ -125,7 +128,7 @@
             </h3>
             <div class="answer">
               Participate in the Spring 2019 Pilot hackathon as a team or as an individual
-              <button class="btn btn-dark btn-how-register d-block"> Register Now!</button>
+              <a href="/registration.html" class="btn btn-dark btn-how-register d-block"> Register Now!</a>
             </div>
           </div>
         </div>
