--- a/sponsors.html
+++ b/sponsors.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
-
-
   <script src="https://kit.fontawesome.com/1eb965a31c.js" crossorigin="anonymous"></script>
 
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/contact.css" />
+  <link rel="stylesheet" href="./dist/sponsors.css" />
+
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
+
 
   <title>Greenhacks</title>
 </head>
@@ -38,10 +38,10 @@
           <a class="nav-link" href="#team">Our Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#sponsors">Sponsors</a>
+          <a class="nav-link" href="#sponsors">Sponsors<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Contact Us <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -49,20 +49,19 @@
   <div class="container-fluid parallax parallax-fractal">
     <div class="row">
       <div class="col-md-8 offset-md-2 contact">
-        <h1>Contact Us</h1>
-        <p>
-          Do you have any questions? Are you interested in joining our team or sponsoring an event? Contact us through any of the buttons below or at greenhacksJHU@gmail.com
+        <h1 class="sponsors-title">Thank you to our Sponsors</h1>
+        <p class="sponsors-blurb">
+          We are currently looking for sponsors for our next hackathon in March of 2020. If your organization is interested in sponsoring Greenhacks 2020, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfdweaZrkPpYK0zQdtzrDsnfBie_9oeA1quJLem4fFXHi4uoQ/viewform">Contact Us</a>
         </p>
-        <div class="contact-btns d-flex justify-content-around flex-wrap">
-          <a class="social-link" href="mailto:greenhacksJHU@gmail.com">
-            <i class="far fa-envelope"></i>
-          </a>
-          <a class="social-link" href="https://www.instagram.com/">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a class="social-link" href="https://www.facebook.com/">
-            <i class="fab fa-facebook-f"></i>
-          </a>
+
+        <div class="sponsors-container d-flex justify-content-around flex-wrap">
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhu.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhucc.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhuclf.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhuehe.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhusga.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/jhusustainability.webp" />
+          <img class="sponsor-pic img-thumbnail" src="./dist/ffu.webp" />
         </div>
 
       </div>
