--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#team">Our Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#sponsors">Sponsors</a>
+          <a class="nav-link" href="./sponsors.html">Sponsors</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact Us</a>
