--- a/registration.html
+++ b/registration.html
@@ -37,10 +37,10 @@
           <a class="nav-link" href="#team">Our Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sponsors.html">Sponsors</a>
+          <a class="nav-link" href="./sponsors.html">Sponsors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact Us </a>
+          <a class="nav-link" href="./contact.html">Contact Us </a>
         </li>
       </ul>
     </div>
