--- a/sponsors.html
+++ b/sponsors.html
@@ -41,7 +41,7 @@
           <a class="nav-link" href="#sponsors">Sponsors<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/contact.html">Contact Us</a>
+          <a class="nav-link" href="./contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
