--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <!-- line break -->
       <div class="col-sm-8 offset-sm-2">
         <div class="about-btn-container d-flex justify-content-around flex-wrap">
-          <button type="button" class="btn btn-dark about-btn">Participate</button>
-          <button type="button" class="btn btn-dark about-btn">Sponsor</button>
-          <button type="button" class="btn btn-dark about-btn">Our Team</button>
+          <a type="button" class="btn btn-dark about-btn" href="./registration.html">Participate</a>
+          <a type="button" class="btn btn-dark about-btn" href="./sponsors.html">Sponsor</a>
+          <a type="button" class="btn btn-dark about-btn" href="./team.html">Our Team</a>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
             </h3>
             <div class="answer">
               Participate in the Spring 2019 Pilot hackathon as a team or as an individual
-              <a href="/registration.html" class="btn btn-dark btn-how-register d-block"> Register Now!</a>
+              <a href="./registration.html" class="btn btn-dark btn-how-register d-block"> Register Now!</a>
             </div>
           </div>
         </div>
