--- a/registration.html
+++ b/registration.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 offset-md-3 register">
+      <div class="col-10 offset-1 col-md-6 offset-md-3 register">
         <h3 class="form-title">Registration</h3>
         <form action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSfjLJK4mlSc8PlxI2dnLkjqob90rDChzgEfkrIKbov-GBELUg/formResponse"
         method="POST"
