--- a/registration.html
+++ b/registration.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#">Participate <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#team">Our Team</a>
+          <a class="nav-link" href="./team.html">Our Team</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./sponsors.html">Sponsors</a>
