--- a/sponsors.html
+++ b/sponsors.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="./registration.html">Participate</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#team">Our Team</a>
+          <a class="nav-link" href="./team.html">Our Team</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="#sponsors">Sponsors<span class="sr-only">(current)</span></a>
