--- a/team.html
+++ b/team.html
@@ -51,73 +51,73 @@
       <div class="col-md-8 offset-md-2 contact">
         <h1 class="team-title">Our Team</h1>
         <div class="row">
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/aditi.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Aditi</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/brennan.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Brennan</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/julia.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Julia</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/Maya.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Maya</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/melanie.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Melanie</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/michael.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Michael</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/michelle.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Michelle</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/morgan.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Morgan</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/shafkat.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Shafkat</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/tom.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Tom</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/trent.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Trent</p>
             </div>
           </div>
-          <div class="col-sm-3 col-12">
+          <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
               <img src="./dist/valeria.jpg" class="person-pic img-thumbnail"/>
               <p class="person-name">Valeria</p>
