--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="col-xs-12 section splash parallax parallax-splash">
           <img src="./dist/logo.webp" class="gh-splash mx-auto" />
-          <a href="/registration.html" type="button" class="btn btn-dark splash-btn mx-auto">Register Now</a>
+          <a href="./registration.html" type="button" class="btn btn-dark splash-btn mx-auto">Register Now</a>
         </div>
     </div>
   </div>
