--- a/index.html
+++ b/index.html
@@ -98,37 +98,36 @@
         </h2>
         <img src="./dist/leaves.svg" class="leaves-2"/>
         <h3 class="question">
-          What is a Sustainability Hackathon?
+          What is a sustainability hackathon?
         </h3>
         <div class="answer-lg">
           While a “hackathon” was originally used to refer to a collaborative computer programming event, a Sustainability Hackathon will focus on gathering creative and motivated people from diverse backgrounds to design interesting solutions for sustainable development. Students will form teams in order to address specific sustainability challenges and will be judged on the creativity, feasibility, and impact of their ideas. We emphasize that participants can come from all areas of expertise, and solutions can come in any form ranging from well-thought out business proposals, mobile applications, to hardware prototypes, and so on.
         </div>
         <div class="row">
 
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <h3 class="question">
               Who?
             </h3>
             <div class="answer">
               Open to any university students.
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h3 class="question">
-              When & Where?
-            </h3>
-            <div class="answer">
-              March 27-29, 2020<br />
-              Hodson building on Hopkins Homewood campus
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h3 class="question">
-              How?
-            </h3>
-            <div class="answer">
-              Participate in the Spring 2019 Pilot hackathon as a team or as an individual
               <a href="./registration.html" class="btn btn-dark btn-how-register d-block"> Register Now!</a>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h3 class="question">
+              Where?
+            </h3>
+            <div class="answer">
+              Hopkins Homewood Campus
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h3 class="question">
+              When?
+            </h3>
+            <div class="answer">
+              March 27-29, 2020
             </div>
           </div>
         </div>
