--- a/sponsors.html
+++ b/sponsors.html
@@ -49,19 +49,18 @@
   <div class="container-fluid parallax parallax-fractal">
     <div class="row">
       <div class="col-md-8 offset-md-2 contact">
-        <h1 class="sponsors-title">Thank you to our Sponsors</h1>
-        <p class="sponsors-blurb">
-          We are currently looking for sponsors for our next hackathon in March of 2020. If your organization is interested in sponsoring Greenhacks 2020, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfdweaZrkPpYK0zQdtzrDsnfBie_9oeA1quJLem4fFXHi4uoQ/viewform">Contact Us</a>
+        <h1 class="sponsor-title">Thank you to our Sponsors</h1>
+        <p class="sponsor-blurb">
+          We are currently looking for sponsors for our next hackathon in March of 2020. If your organization is interested in sponsoring Greenhacks 2020, please <a href="mailto:greenhacks.outreach@gmail.com">E-mail Us</a>
         </p>
 
-        <div class="sponsors-container d-flex justify-content-around flex-wrap">
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhu.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhucc.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhuclf.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhuehe.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhusga.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/jhusustainability.webp" />
-          <img class="sponsor-pic img-thumbnail" src="./dist/ffu.webp" />
+        <div class="col-md-3 col-sm-6 col-12">
+          <div class="sponsor-container">
+            <img class="sponsor-pic" src="./dist/jhusustainability.webp" />
+            <div class="sponsor-overlay d-flex justify-content-center align-times-center d-flex justify-content-center align-items-center">
+              <p class="sponsor-name">JHU Office of Sustainability</p>
+            </div>
+          </div>
         </div>
 
       </div>
