--- a/team.html
+++ b/team.html
@@ -35,10 +35,10 @@
           <a class="nav-link" href="./registration.html">Participate</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#team">Our Team<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Our Team<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#sponsors">Sponsors</a>
+          <a class="nav-link" href="./sponsors.html">Sponsors</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact Us</a>
@@ -51,78 +51,88 @@
       <div class="col-md-8 offset-md-2 contact">
         <h1 class="team-title">Our Team</h1>
         <div class="row">
+          <div class='col-12'>
+            <h2 class="committee-title text-center">Ops/Logistics</h2>
+          </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/aditi.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Aditi</p>
+              <img src="./dist/tom.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Tom</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/brennan.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Brennan</p>
+              <img src="./dist/brennan.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Brennan</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/julia.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Julia</p>
+              <img src="./dist/julia.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Julia</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/maya.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Maya</p>
+              <img src="./dist/michelle.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Michelle</p></div>
+            </div>
+          </div>
+
+          <div class='col-12'>
+            <h2 class="committee-title text-center">Outreach</h2>
+          </div>
+          <div class="col-md-3 col-sm-6 col-12">
+            <div class="person-container">
+              <img src="./dist/valeria.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Valeria</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/melanie.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Melanie</p>
+              <img src="./dist/melanie.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Melanie</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/michael.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Michael</p>
+              <img src="./dist/trent.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Trent</p></div>
+            </div>
+          </div>
+          <div class='col-12'>
+            <h2 class="committee-title text-center">Marketing</h2>
+          </div>
+          <div class="col-md-3 col-sm-6 col-12">
+            <div class="person-container">
+              <img src="./dist/maya.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Maya</p></div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/michelle.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Michelle</p>
+              <img src="./dist/michael.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Michael</p></div>
             </div>
+          </div>
+          <div class='col-12'>
+            <h2 class="committee-title text-center">Finance</h2>
           </div>
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/morgan.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Morgan</p>
+              <img src="./dist/aditi.jpg" class="person-pic"/>
+              <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Aditi</p></div>
             </div>
           </div>
+
           <div class="col-md-3 col-sm-6 col-12">
             <div class="person-container">
-              <img src="./dist/shafkat.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Shafkat</p>
+              <img src="./dist/shafkat.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Shafkat</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="person-container">
-              <img src="./dist/tom.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Tom</p>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="person-container">
-              <img src="./dist/trent.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Trent</p>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-12">
-            <div class="person-container">
-              <img src="./dist/valeria.jpg" class="person-pic img-thumbnail"/>
-              <p class="person-name">Valeria</p>
-            </div>
-          </div>
+
+
         </div>
       </div>
     </div>
