--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/contact.css" />
 
-  <title>Greenhacks</title>
+  <title>GreenHacks</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -76,7 +76,7 @@
           Johns Hopkins University
         </p>
         <p>
-          Baltimore MD 21218
+          Baltimore, MD 21218
         </p>
         <p>
           © 2019 GreenHacks.
