--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./dist/index.css" />
-  <title>Greenhacks</title>
+  <title>GreenHacks</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -119,7 +119,7 @@
               Where?
             </h3>
             <div class="answer">
-              Hopkins Homewood Campus
+              Johns Hopkins Homewood Campus
             </div>
           </div>
           <div class="col-lg-4">
@@ -142,7 +142,7 @@
           Johns Hopkins University
         </p>
         <p>
-          Baltimore MD 21218
+          Baltimore, MD 21218
         </p>
         <p>
           © 2019 GreenHacks.
