--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,18 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/registration.css" />
 
-  <title>Greenhacks</title>
+  <title>GreenHacks</title>
+
+  <script>
+  function showOthers(val) {
+    console.log(val);
+      if (val === "Other") {
+         document.getElementById('other').style.display='block';
+      } else {
+         document.getElementById('other').style.display='none';
+      }
+  }
+  </script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -64,9 +75,13 @@
     <div class="row">
       <div class="col-10 offset-1 col-md-6 offset-md-3 register">
         <h3 class="form-title">Registration</h3>
+        <script type="text/javascript">var submitted=false;</script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='thankyou.html';}"></iframe>
+
         <form action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSfjLJK4mlSc8PlxI2dnLkjqob90rDChzgEfkrIKbov-GBELUg/formResponse"
         method="POST"
-        target="_self">
+        target="hidden_iframe"
+        onsubmit="submitted=true;">
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label class="sr-only" for="entry.540408734">First Name</label>
@@ -82,12 +97,12 @@
 
         <div class="form-group">
           <label class="sr-only" class="" for="emailAddress">Email</label>
-          <input type="email" class="form-input effect" placeholder="Email Address" autocomplete="email" tabindex="0" aria-label="Your email" name="emailAddress" value="" required="" dir="auto" data-initial-dir="auto" data-initial-value="">
+          <input type="email" class="form-input effect" placeholder="Email Address" required="" autocomplete="email" tabindex="0" aria-label="Your email" name="emailAddress" value="" dir="auto" data-initial-dir="auto" data-initial-value="">
           <span class="focus-border"></span>
         </div>
         <div class="form-group">
           <label class="sr-only" for="entry.1512175428">Phone Number</label>
-          <input type="tel" class="form-input effect" placeholder="Phone Number" autocomplete="email" tabindex="0" aria-label="Your phone number" name="entry.1512175428" value="" required="" dir="auto" data-initial-dir="auto" data-initial-value="">
+          <input type="tel" class="form-input effect" placeholder="Phone Number" required="" autocomplete="email" tabindex="0" aria-label="Your phone number" name="entry.1512175428" value="" required="" dir="auto" data-initial-dir="auto" data-initial-value="">
           <span class="focus-border"></span>
         </div>
         <div class="form-group">
@@ -103,7 +118,7 @@
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label class="sr-only" for="entry.1712645063">Dietary Restrictions</label>
-            <select class="form-input effect form-control" name="entry.1236528233" >
+            <select class="form-input effect form-control" name="entry.1236528233" onchange="showOthers(this.options[this.selectedIndex].value)">
               <option disabled selected value="">
                 Dietary Restrictions
               </option>
@@ -125,7 +140,15 @@
               <option value="None">
                 None
               </option>
+              <option value="Other">
+                Other
+              </option>
             </select>
+          </div>
+          <div class="form-group col-12" id="other">
+            <label class="sr-only" for="entry.1514387024">Other Dietary Restrictions</label>
+            <input type="text" class="form-input effect" placeholder="Other Dietary Restrictions" autocomplete="off" tabindex="0" aria-label="Name"  name="entry.1514387024" value="" dir="auto" data-initial-dir="auto" data-initial-value="" aria-invalid="false">
+            <span class="focus-border"></span>
           </div>
           <div class="form-group col-sm-6">
             <label class="sr-only" for="entry.1712645063">T-Shirt Size</label>
@@ -155,7 +178,7 @@
           </div>
           <div class="form-group col-12">
             <label class="sr-only" for="entry.1648901617">Resume/Portfolio Link</label>
-            <input type="text" class="form-input effect" placeholder="Resume/Portfolio Link" autocomplete="off" tabindex="0" aria-label="Name"  name="entry.1648901617" value="" dir="auto" data-initial-dir="auto" data-initial-value="" aria-invalid="false">
+            <input type="text" class="form-input effect" placeholder="Resume/Portfolio Link" required="" autocomplete="off" tabindex="0" aria-label="Name"  name="entry.1648901617" value="" dir="auto" data-initial-dir="auto" data-initial-value="" aria-invalid="false">
             <span class="focus-border"></span>
           </div>
         </div>
@@ -172,7 +195,7 @@
           Johns Hopkins University
         </p>
         <p>
-          Baltimore MD 21218
+          Baltimore, MD 21218
         </p>
         <p>
           © 2019 GreenHacks.
