--- a/sponsors.html
+++ b/sponsors.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
 
 
-  <title>Greenhacks</title>
+  <title>GreenHacks</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,7 +51,7 @@
       <div class="col-md-8 offset-md-2 contact">
         <h1 class="sponsor-title">Thank you to our Sponsors</h1>
         <p class="sponsor-blurb">
-          We are currently looking for sponsors for our next hackathon in March of 2020. If your organization is interested in sponsoring Greenhacks 2020, please <a href="mailto:greenhacks.outreach@gmail.com">E-mail Us</a>
+          We are currently looking for sponsors for our next hackathon in March of 2020. If your organization is interested in sponsoring GreenHacks 2020, please <a href="mailto:greenhacks.outreach@gmail.com">email us</a>
         </p>
 
         <div class="col-md-3 col-sm-6 col-12">
@@ -74,7 +74,7 @@
           Johns Hopkins University
         </p>
         <p>
-          Baltimore MD 21218
+          Baltimore, MD 21218
         </p>
         <p>
           © 2019 GreenHacks.
