--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
 
 
-  <title>Greenhacks</title>
+  <title>GreenHacks</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,29 +50,29 @@
     <div class="row">
       <div class="col-md-8 offset-md-2 contact">
         <h1 class="team-title">Our Team</h1>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class='col-12'>
-            <h2 class="committee-title text-center">Ops/Logistics</h2>
+            <h2 class="committee-title text-center">Operations & Logistics</h2>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/tom.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Tom</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/brennan.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Brennan</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/julia.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Julia</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/michelle.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Michelle</p></div>
@@ -82,50 +82,56 @@
           <div class='col-12'>
             <h2 class="committee-title text-center">Outreach</h2>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/valeria.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Valeria</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/melanie.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Melanie</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/trent.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Trent</p></div>
             </div>
           </div>
           <div class='col-12'>
-            <h2 class="committee-title text-center">Marketing</h2>
+            <h2 class="committee-title text-center">Marketing & Communications</h2>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/maya.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Maya</p></div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/michael.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Michael</p></div>
             </div>
           </div>
+          <div class="person-col">
+            <div class="person-container">
+              <img src="./dist/fionn.jpg" class="person-pic"/>
+               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Fionn</p></div>
+            </div>
+          </div>
           <div class='col-12'>
             <h2 class="committee-title text-center">Finance</h2>
           </div>
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/aditi.jpg" class="person-pic"/>
               <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Aditi</p></div>
             </div>
           </div>
 
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="person-col">
             <div class="person-container">
               <img src="./dist/shafkat.jpg" class="person-pic"/>
                <div class="person-overlay d-flex justify-content-center align-items-center"><p class="person-name">Shafkat</p></div>
@@ -145,7 +151,7 @@
           Johns Hopkins University
         </p>
         <p>
-          Baltimore MD 21218
+          Baltimore, MD 21218
         </p>
         <p>
           © 2019 GreenHacks.
