--- a/registration.html
+++ b/registration.html
@@ -30,7 +30,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="./dist/logo.webp" class="gh-logo" />
+      <img src="./dist/logo.png" class="gh-logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -190,7 +190,7 @@
   <div class="footer container-fluid">
     <div class="row">
       <div class="col-sm-4 offset-sm-4">
-        <img src="./dist/logo.webp" class="gh-footer mx-auto" />
+        <img src="./dist/logo.png" class="gh-footer mx-auto" />
         <p>
           Johns Hopkins University
         </p>
