--- a/sponsors.html
+++ b/sponsors.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="./dist/logo.webp" class="gh-logo" />
+      <img src="./dist/logo.png" class="gh-logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
 
         <div class="col-md-3 col-sm-6 col-12">
           <div class="sponsor-container">
-            <img class="sponsor-pic" src="./dist/jhusustainability.webp" />
+            <img class="sponsor-pic" src="./dist/jhusustainability.png" />
             <div class="sponsor-overlay d-flex justify-content-center align-times-center d-flex justify-content-center align-items-center">
               <p class="sponsor-name">JHU Office of Sustainability</p>
             </div>
@@ -69,7 +69,7 @@
   <div class="footer container-fluid">
     <div class="row">
       <div class="col-sm-4 offset-sm-4">
-        <img src="./dist/logo.webp" class="gh-footer mx-auto" />
+        <img src="./dist/logo.png" class="gh-footer mx-auto" />
         <p>
           Johns Hopkins University
         </p>
