--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="./dist/logo.webp" class="gh-logo" />
+      <img src="./dist/logo.png" class="gh-logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
   <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 section splash parallax parallax-splash">
-          <img src="./dist/logo.webp" class="gh-splash mx-auto" />
+          <img src="./dist/logo.png" class="gh-splash mx-auto" />
           <a href="./registration.html" type="button" class="btn btn-dark splash-btn mx-auto">Register Now</a>
         </div>
     </div>
@@ -137,7 +137,7 @@
   <div class="footer container-fluid">
     <div class="row">
       <div class="col-sm-4 offset-sm-4">
-        <img src="./dist/logo.webp" class="gh-footer mx-auto" />
+        <img src="./dist/logo.png" class="gh-footer mx-auto" />
         <p>
           Johns Hopkins University
         </p>
