--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               When?
             </h3>
             <div class="answer">
-              March 27-29, 2020
+              April 3 - 5, 2020
             </div>
           </div>
         </div>
